--- a/photography.html
+++ b/photography.html
@@ -7,6 +7,7 @@
     <title data-i18n="photo_consolidated_title">Photography Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/i18n.js" defer></script>
+    <script src="js/render.js" defer></script>
     <script src="js/router.js" defer></script>
 </head>
 
@@ -46,52 +47,8 @@
             <h2 data-i18n="photo_nature">Nature & Landscapes</h2>
             <p data-i18n="photo_intro">My lens focuses on the quiet beauty of nature and the stillness of the world.</p>
 
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="photography_landscape_misty.png" alt="Photo 1">
-                    <p align="center">Mist Over the Pines</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 02 Feb 2026
-                    </p>
-                </div>
-                <div class="gallery-item">
-                    <img src="photo_placeholder_2.png" alt="Photo 2">
-                    <p align="center">Golden Hour</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 03 Feb 2026
-                    </p>
-                </div>
-                <div class="gallery-item">
-                    <img src="photo_placeholder_3.png" alt="Photo 3">
-                    <p align="center">The Lone Path</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 04 Feb 2026
-                    </p>
-                </div>
-            </div>
-
-            <hr>
-
-            <h2 data-i18n="street_candid">Candid Urban Moments</h2>
-            <p data-i18n="street_intro">Street photography is about finding beauty in the chaos. It's the art of the
-                decisive moment.</p>
-
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <img src="street_photography_urban_life.png" alt="Street Photography 1">
-                    <p align="center">Intersection Rhythm</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 06 Feb 2026
-                    </p>
-                </div>
-                <div class="gallery-item">
-                    <img src="street_placeholder_2.png" alt="Street Photography 2">
-                    <p align="center">Shadows of the Subway</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 07 Feb 2026
-                    </p>
-                </div>
-                <div class="gallery-item">
-                    <img src="street_placeholder_3.png" alt="Street Photography 3">
-                    <p align="center">The Rain Walkers</p>
-                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 08 Feb 2026
-                    </p>
-                </div>
+            <div id="gallery-container" class="gallery-grid">
+                <!-- Data will be loaded dynamically by render.js -->
             </div>
 
             <div class="marquee-container" style="margin-top: 30px;">
