--- a/admin.html
+++ b/admin.html
@@ -440,7 +440,7 @@
                 }
 
                 consoleBox.innerHTML += `<br><span style="color: orange">> AGENT REQUIRED: ${Object.keys(missing).length} languages have missing keys.</span>`;
-                alert("The system found missing keys: \\n" + report + "\\nPlease ask me (Antigravity) in the chat to 'Translate the missing keys for " + Object.keys(missing).join(', ') + "' and I will fix them instantly!");
+                consoleBox.innerHTML += `<br><span style="color: yellow">> TIP: Ask Antigravity in the chat to 'Translate the missing keys for ${Object.keys(missing).join(', ')}' and they will be fixed instantly!</span>`;
             } catch (err) {
                 consoleBox.innerHTML += `<br><span style="color: red">> Error checking missing keys.</span>`;
             }
@@ -498,10 +498,32 @@
                         deleteBtn.style.fontSize = '10px';
                         deleteBtn.style.color = 'red';
                         deleteBtn.style.marginLeft = '5px';
-                        deleteBtn.onclick = (e) => { e.stopPropagation(); deleteItem(category, id); };
+
+                        const statusSpan = document.createElement('span');
+                        statusSpan.style.fontSize = '9px';
+                        statusSpan.style.marginLeft = '5px';
+
+                        deleteBtn.onclick = (e) => {
+                            e.stopPropagation();
+                            if (deleteBtn.dataset.armed === 'true') {
+                                deleteItem(category, id, statusSpan);
+                            } else {
+                                deleteBtn.dataset.armed = 'true';
+                                deleteBtn.innerText = 'Sure?';
+                                deleteBtn.style.fontWeight = 'bold';
+                                statusSpan.innerHTML = '<span style="color: orange;">click again to confirm</span>';
+                                setTimeout(() => {
+                                    deleteBtn.dataset.armed = 'false';
+                                    deleteBtn.innerText = 'Delete';
+                                    deleteBtn.style.fontWeight = 'normal';
+                                    statusSpan.innerHTML = '';
+                                }, 3000);
+                            }
+                        };
 
                         actions.appendChild(editBtn);
                         actions.appendChild(deleteBtn);
+                        actions.appendChild(statusSpan);
                         div.appendChild(actions);
 
                         list.appendChild(div);
@@ -521,9 +543,8 @@
             }
         }
 
-        async function deleteItem(category, id) {
-            if (!confirm(`Are you sure you want to delete this item from ${category}?`)) return;
-
+        async function deleteItem(category, id, statusSpan) {
+            statusSpan.innerHTML = '<span style="color: yellow;">deleting...</span>';
             try {
                 const res = await fetch(`${API_URL}/api/content/delete`, {
                     method: 'POST',
@@ -533,39 +554,18 @@
                 const result = await res.json();
                 if (result.success) {
                     document.getElementById('console').innerHTML += `<br><span style="color: orange">> Item "${id}" deleted from ${category}.</span>`;
-                    loadContent();
+                    statusSpan.innerHTML = '<span style="color: lime;">deleted!</span>';
+                    setTimeout(() => loadContent(), 500);
                 } else {
-                    alert('Error: ' + result.error);
+                    statusSpan.innerHTML = `<span style="color: red;">error: ${result.error}</span>`;
                 }
             } catch (err) {
-                alert('Network Error');
+                statusSpan.innerHTML = '<span style="color: red;">network error</span>';
             }
         }
 
-        async function editItem(category, id) {
-            const newTitle = prompt('Enter new title for this item:');
-            if (!newTitle) return;
-
-            try {
-                const res = await fetch(`${API_URL}/api/content/update`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        category,
-                        id,
-                        updates: { title: newTitle }
-                    })
-                });
-                const result = await res.json();
-                if (result.success) {
-                    document.getElementById('console').innerHTML += `<br><span style="color: cyan">> Item "${id}" in ${category} updated to "${newTitle}".</span>`;
-                    loadContent();
-                } else {
-                    alert('Error: ' + result.error);
-                }
-            } catch (err) {
-                alert('Network Error');
-            }
+        function editItem(category, id) {
+            window.location.href = `edit.html?category=${encodeURIComponent(category)}&id=${encodeURIComponent(id)}`;
         }
 
         async function syncGitHub() {
@@ -578,13 +578,19 @@
 
                 if (result.success) {
                     consoleBox.innerHTML += `<br><span style="color: lime">> GitHub Sync Successful: ${result.count} repositories fetched.</span>`;
-                    alert(`Sync Complete! ${result.count} projects found and updated in data/projects.json.`);
+                    consoleBox.innerHTML += `<br><span style="color: cyan">> ${result.count} projects updated in data/projects.json.</span>`;
                 } else {
                     consoleBox.innerHTML += `<br><span style="color: red">> GitHub Sync Failed: ${result.error}</span>`;
                 }
             } catch (err) {
                 consoleBox.innerHTML += `<br><span style="color: red">> Network Error during GitHub Sync.</span>`;
             }
+        }
+
+        // Auto-switch to Manage tab if returning from edit page
+        if (window.location.hash === '#manage') {
+            const manageTab = document.querySelectorAll('.tab')[1];
+            if (manageTab) showTab('manage', manageTab);
         }
 
     </script>
