--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
 <body>
     <div class="container">
         <div class="lang-switcher">
-            <button class="lang-btn"><span class="lang-flag">🇬🇧</span> English</button>
+            <button class="lang-btn"><span class="lang-flag">🇬🇧🇨🇦</span> English</button>
             <div class="lang-dropdown">
-                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">🇫🇷</span> French
-                    (France)</div>
-                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧</span> English
-                    (England)</div>
+                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧🇨🇦</span> English
+                </div>
+                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">⚜️🇨🇦</span> French
+                </div>
                 <div class="lang-option" onclick="i18n.changeLang('mx')"><span class="lang-flag">🇲🇽</span> Spanish
-                    (Mexico)</div>
-                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Haitian
-                    Creole (Haiti)</div>
-                <div class="lang-option" onclick="i18n.changeLang('qc')"><span class="lang-flag">⚜️</span> Joual
-                    (Quebec)</div>
-                <div class="lang-option" onclick="i18n.changeLang('ac')"><span class="lang-flag">🇨🇦</span> Acadian
-                    (Canada)</div>
+                </div>
+                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Creole
+                </div>
             </div>
         </div>
 
