--- a/photography.html
+++ b/photography.html
@@ -15,25 +15,22 @@
     <div class="container">
         <!-- Lang Switcher (Simplified for SPA) -->
         <div class="lang-switcher">
-            <button class="lang-btn"><span class="lang-flag">🇬🇧</span> English</button>
+            <button class="lang-btn"><span class="lang-flag">🇬🇧🇨🇦</span> English</button>
             <div class="lang-dropdown">
-                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">🇫🇷</span> French
+                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧🇨🇦</span> English
                 </div>
-                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧</span> English
+                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">⚜️🇨🇦</span> French
                 </div>
                 <div class="lang-option" onclick="i18n.changeLang('mx')"><span class="lang-flag">🇲🇽</span> Spanish
                 </div>
-                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Haitian
-                    Creole</div>
-                <div class="lang-option" onclick="i18n.changeLang('qc')"><span class="lang-flag">⚜️</span> Joual</div>
-                <div class="lang-option" onclick="i18n.changeLang('ac')"><span class="lang-flag">🇨🇦</span> Acadian
+                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Creole
                 </div>
             </div>
         </div>
 
         <header>
             <h1 data-i18n="photo_consolidated_title">Photography</h1>
-            <p><i data-i18n="photo_consolidated_subtitle">From Landscapes to Urban Life</i></p>
+            <p><i data-i18n="photo_consolidated_subtitle">People & Cities — Street Life Through the Lens</i></p>
             <nav>
                 <a href="index.html" data-i18n="nav_home">Home</a>
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
@@ -44,8 +41,9 @@
         </header>
 
         <main class="main-content">
-            <h2 data-i18n="photo_nature">Nature & Landscapes</h2>
-            <p data-i18n="photo_intro">My lens focuses on the quiet beauty of nature and the stillness of the world.</p>
+            <h2 data-i18n="photo_nature">People & Cities</h2>
+            <p data-i18n="photo_intro">My lens focuses on the energy of urban life — the faces, the streets, and the
+                stories that unfold in the city.</p>
 
             <div id="gallery-container" class="gallery-grid">
                 <!-- Data will be loaded dynamically by render.js -->
