--- a/gallery.html
+++ b/gallery.html
@@ -14,20 +14,16 @@
 <body>
     <div class="container">
         <div class="lang-switcher">
-            <button class="lang-btn"><span class="lang-flag">🇬🇧</span> English</button>
+            <button class="lang-btn"><span class="lang-flag">🇬🇧🇨🇦</span> English</button>
             <div class="lang-dropdown">
-                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">🇫🇷</span> French
-                    (France)</div>
-                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧</span> English
-                    (England)</div>
+                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧🇨🇦</span> English
+                </div>
+                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">⚜️🇨🇦</span> French
+                </div>
                 <div class="lang-option" onclick="i18n.changeLang('mx')"><span class="lang-flag">🇲🇽</span> Spanish
-                    (Mexico)</div>
-                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Haitian
-                    Creole (Haiti)</div>
-                <div class="lang-option" onclick="i18n.changeLang('qc')"><span class="lang-flag">⚜️</span> Joual
-                    (Quebec)</div>
-                <div class="lang-option" onclick="i18n.changeLang('ac')"><span class="lang-flag">🇨🇦</span> Acadian
-                    (Canada)</div>
+                </div>
+                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Creole
+                </div>
             </div>
         </div>
 
@@ -39,6 +35,7 @@
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
+                <a href="music.html" data-i18n="nav_music">Music</a>
                 <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
