--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
+                <a href="music.html" data-i18n="nav_music">Music</a>
                 <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
