--- a/sculpting.html
+++ b/sculpting.html
@@ -16,18 +16,15 @@
     <div class="container">
         <!-- Lang Switcher -->
         <div class="lang-switcher">
-            <button class="lang-btn"><span class="lang-flag">🇬🇧</span> English</button>
+            <button class="lang-btn"><span class="lang-flag">🇬🇧🇨🇦</span> English</button>
             <div class="lang-dropdown">
-                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">🇫🇷</span> French
+                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧🇨🇦</span> English
                 </div>
-                <div class="lang-option" onclick="i18n.changeLang('en')"><span class="lang-flag">🇬🇧</span> English
+                <div class="lang-option" onclick="i18n.changeLang('fr')"><span class="lang-flag">⚜️🇨🇦</span> French
                 </div>
                 <div class="lang-option" onclick="i18n.changeLang('mx')"><span class="lang-flag">🇲🇽</span> Spanish
                 </div>
-                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Haitian
-                    Creole</div>
-                <div class="lang-option" onclick="i18n.changeLang('qc')"><span class="lang-flag">⚜️</span> Joual</div>
-                <div class="lang-option" onclick="i18n.changeLang('ac')"><span class="lang-flag">🇨🇦</span> Acadian
+                <div class="lang-option" onclick="i18n.changeLang('ht')"><span class="lang-flag">🇭🇹</span> Creole
                 </div>
             </div>
         </div>
@@ -40,6 +37,7 @@
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
+                <a href="music.html" data-i18n="nav_music">Music</a>
                 <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
