--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
                     <div class="radio-selector">
                         <label for="track-select" data-i18n="sidebar_radio_select">Select Track:</label>
                         <select id="track-select" class="radio-track-select">
-                            <option value="0">Retro Hits Mix</option>
-                            <option value="1">Cyberpunk Dreams</option>
-                            <option value="2">Vaporwave Vibes</option>
+                            <option value="">Loading tracks...</option>
                         </select>
                     </div>
                 </div>
