--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
                     <div class="radio-selector">
                         <label for="track-select" data-i18n="sidebar_radio_select">Select Track:</label>
                         <select id="track-select" class="radio-track-select">
-                            <option value="">Loading tracks...</option>
+                            <option value="" data-i18n="sidebar_radio_loading">Loading tracks...</option>
                         </select>
                     </div>
                 </div>
